# inject_func

./: README.md  inject_data.py  inject_objects.py  pyproject.toml
inject_objects/: __init__.py  inject_objects.py
tests/: test_simple-tests.py
